<resources>
    <string name="app_name">Unity</string>
    <string name="todo">TODO</string>
    <string name="login">Giriş Yap</string>
    <string name="unity_system">Unity Takip Sistemi</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="remember_me">Beni Hatırla</string>
    <string name="forgot_password">Şifremi Unuttum</string>
    <string name="sign_up">Kayıt Ol</string>
    <string name="follow_social">Sosyal Medya Hesaplarımızı Takip Edin</string>
    <string name="this_version">-.-.-</string>
    <string name="clickOneMoreTimeToExit">Çıkmak için geri tuşuna tekrardan basınız</string>
    <string name="name_surname">İsim Soyisim</string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="mail">Mail</string>
    <string name="send">Gönder</string>
    <string name="company_name">Şirket Adı</string>
    <string name="password_again">Şifre Tekrar</string>
    <string name="phone">Telefon</string>
    <string name="admin_confirmation_password">Yönetici Onay Formu</string>
    <string name="blank">Alanlar boş bırakılamaz</string>
    <string name="password_not_match">Şifreler uyuşmamaktadır</string>
    <string name="password_length">Şifreniz 5 haneden küçük 16 haneden büyük olamaz</string>
    <string name="sign_up_await">Bilgileriniz alınmıştır. En kısa sürede kaydınız gerçekleşecektir.</string>
    <string name="home_page">Ana Sayfa</string>
    <string name="products">Ürünler</string>
    <string name="contact">İletişim</string>
    <string name="workers">Çalışanlar</string>
    <string name="profile">Profil</string>
    <string name="settings">Ayarlar</string>
    <string name="share">Paylaş</string>
    <string name="about_us">Hakkımızda</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="automation_system">Otomasyon Sistemleri</string>
    <string name="web_guide">Kenar Kontrol</string>
    <string name="tension_control">Gergi Kontrol</string>
    <string name="camera_system">Baskı İzleme Kamerası</string>
    <string name="cable_system">Kablo Ürünleri</string>
    <string name="speed_control">Hız Kontrol Sistemleri</string>
    <string name="workers_information">Çalışan Bilgileri</string>
    <string name="projects_done">Yapılan Projeler</string>
    <string name="projects_todo">Yapılacak Projeler</string>
    <string name="complaint">Şikayetler</string>
    <string name="message">Mesaj</string>
    <string name="type_a_message">Bir şeyler yaz…</string>
    <string name="web_guide_products">Kenar Kontrol Ürünleri</string>
    <string name="order">Sipariş</string>
    <string name="bid">Teklif</string>
    <string name="service">Servis</string>
    <string name="document">Döküman</string>
    <string name="my_services">Servislerim</string>
    <string name="my_bids">Tekliflerim</string>
    <string name="my_orders">Siparişlerim</string>
    <string name="tension_control_products">Gergi Kontrol Ürünleri</string>
    <string name="camera_system_products">Baskı İzleme Kameraları</string>
    <string name="cable_products">Kablo Ürünleri</string>
    <string name="automation_system_products">Otomasyon Sistemleri</string>
    <string name="documents">Dökümanlar</string>
    <string name="create_service">Servis Oluştur</string>
    <string name="create_order">Fiyat Teklifi Oluştur</string>
    <string name="search">Ara</string>
    <string name="document_loading">Döküman Görüntüleniyor</string>
    <string name="please_wait">Lütfen bekleyiniz…</string>
    <string name="check_internet_connection">İnternet bağlantınız bulunmamaktadır.</string>
    <string name="product_type">Ürün Tipi:</string>
    <string name="product_model">Ürün Modeli:</string>
    <string name="urgency_situation">Aciliyet Durumu:</string>
    <string name="service_type">Servis Türü:</string>
    <string name="malfunction">Arıza</string>
    <string name="assembly">Montaj</string>
    <string name="explanation">Açıklama</string>
    <string name="upload_photo">Fotoğraf Yükle</string>
    <string name="select_image">Fotoğraf Seçiniz</string>
    <string name="camera_permission_text">Galerinize erişım sağlanabilmesi için onayınız gerekmektedir.</string>
    <string name="ok">TAMAM</string>
    <string name="cancel">İptal</string>
    <string name="create">Oluştur</string>
    <string name="machine_type">Makine Türü</string>
    <string name="machine_line_speed">Makine Hat Hızı</string>
    <string name="used_material">Kullanılan Malzeme</string>
    <string name="material_width">Malzeme Genişliği</string>
    <string name="number_orders">Adet</string>
    <string name="output_voltage">Çıkış Voltajı</string>
    <string name="max_coil_weight">Max. Bobin Ağırlığı</string>
    <string name="stroke_length">Strok Uzunluğu</string>
    <string name="used_motor">Kullanılan Motor:</string>
    <string name="ac_motor">AC Motor</string>
    <string name="step_motor">Step Motor</string>
    <string name="brake_type">Fren Türü:</string>
    <string name="magnetic">Manyetik</string>
    <string name="pneumatic">Havalı</string>
    <string name="device_type">Cihaz Türü:</string>
    <string name="winder">Sarıcı</string>
    <string name="unwinder">Çözücü</string>
    <string name="max_material_length">Max. Malzeme Gerginliği</string>
    <string name="megapixel">Çözünürlük (MegaPixel)</string>
    <string name="print_width">Baskı Genişliği</string>
    <string name="cable_diameter_max">Max. Kablo Çapı</string>
    <string name="min_cable_diameter">Min. Kablo Çapı</string>
    <string name="axis_number">Eksen Sayısı:</string>
    <string name="single_axis">Tek Eksen (180°)</string>
    <string name="double_axis">Çift Eksen (360°)</string>
    <string name="number_clipper">Clipper Sayısı</string>
    <string name="with_shaft">Milli Fren</string>
    <string name="perforated_brake">Delikli Fren</string>
    <string name="grasp">Kavrama</string>
    <string name="magnetic_brake_type">Manyetik Fren Türü</string>
    <string name="machine_todo">Yapılacak Makina</string>
    <string name="my_offers">Tekliflerim</string>
    <string name="active">Aktif</string>
    <string name="completed">Tamamlanan</string>
    <string name="title_activity_home_my_services">HomeMyServices</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_home_my_services_ours">HomeMyServicesOurs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_assignment">Görev Oluştur</string>
    <string name="my_assignments">Görevlerim</string>
    <string name="choose_person">Kişi Seçin</string>
    <string name="assignment_to_whom">Firma İsmi</string>
    <string name="assignment_type">Görev Türü</string>
    <string name="assignment_direct">Görev Yönlendir</string>
    <string name="assignment_finish">Görevi Bitir</string>
    <string name="person_chosen">Sorumlu Kişi</string>
    <string name="list_of_people_title">Atamayı onaylıyor musunuz?</string>
    <string name="list_of_people_text">Atama yapilacak Kişi:</string>
    <string name="assignment">Görev</string>
    <string name="warranty">Garanti İçi</string>
    <string name="service_price">Ücretli Servis</string>
    <string name="bill">Faturalandır</string>
    <string name="reminder">Hatırlatıcı</string>
    <string name="reminder_add">Hatırlartıcı Ekle</string>
    <string name="date">Tarih</string>
    <string name="time">Zaman</string>
    <string name="note">Not</string>
    <string name="signing_in">Giriş Yapılıyor.</string>
    <string name="are_you_sure_to_exit">Çıkış Yapmak istediğinize emin misiniz?</string>
    <string name="yes">Evet</string>
    <string name="uploading">Yükleniyor</string>
    <string name="degree_of_urgency">Aciliyet Durumu</string>
    <string name="pdf">Pdf</string>
    <string name="working_people">Çalışanlar</string>
    <string name="assignment_finish_text">Projeyi bitirmek istediğinize emin misiniz?</string>
    <string name="person_created">Görevi Oluşturan</string>
    <string name="date_created">Oluşturma Tarihi</string>
    <string name="date_finished">Bitirme Tarihi</string>
    <string name="explanation_create">Proje Oluşum Notu</string>
    <string name="explanation_finish">Proje Bitim Notu</string>
    <string name="click_to_reach_document">Dökümana erişmek için tıklayınız</string>
    <string name="document_downloading">Döküman İndiriliyor</string>
    <string name="plase_wait">Lütfen bekleyiniz…</string>
    <string name="signing_up">Kaydınız yapılmaktadır.</string>
    <string name="user_signed">Bilgileriniz alınmıştır. Kayıt durumunuz sizlere bildirim aracılığıyla bildirilecektir.</string>
    <string name="user_on_hold">Kayıt Bekleyen Kullanıcılar</string>
    <string name="user">Kullanıcı</string>
    <string name="date_empty">../../....</string>
    <string name="worker_at_unity">Unity Grup A.Ş. Çalışanı</string>
    <string name="authorization">Yetki</string>
    <string name="position">Pozisyon</string>
    <string name="confirm_user">Kullanıcıyı Onayla</string>
    <string name="deny_user">Kullanıcıyı Reddet</string>
    <string name="deny_text">Kullanıcıya reddedildiğine dair bildirim gönderilecektir.</string>
    <string name="deny_title">Kullanıcı kaydını reddetmek istediğinize emin misiniz?</string>
    <string name="confirm_text">Kullanıcının kaydolduğuna dair bildirim gönderilecektir.</string>
    <string name="confirm_title">Kullanıcı kaydını onaylıyor musunuz?</string>
    <string name="confirm_signup">Kayıt gerçekleştirilsin mi?</string>
    <string name="confirm_signup_text">Bilgileriniz onaylandığı takdirde bildirim alacaksınız.</string>
    <string name="assignment_all">Tüm Görevler</string>
    <string name="finance_projects">Finansal Projeler</string>
    <string name="add_company">Şirket Ekle</string>
    <string name="company_add_text">Şirketi eklemek istediğinize emin misiniz?</string>
    <string name="city">Şehir</string>
    <string name="district">İlçe</string>
    <string name="in_charge_name">Sorumlu Kişi</string>
    <string name="create_company">Şirketi Kaydet</string>
    <string name="assignment_title">Görev Başlığı</string>
    <string name="download">Indir</string>
    <string name="visit_apk">Siteye Git</string>
    <string name="update">Güncelle</string>
    <string name="invitation_message">Unity Mobil:</string>
    <string name="title">Başlık</string>
    <string name="date_reminder">Hatırlatma Tarihi</string>
    <string name="notes">Notlar</string>
    <string name="create_note">Not Oluştur</string>
    <string name="adding_notes">Notunuz Ekleniyor</string>
    <string name="choose_what_to_do">Yapılacak işlemi seçiniz</string>
    <string name="are_you_sure_to_delete">Seçilen notu silmek istediğinize emin misiniz?</string>
    <string name="are_you_sure_to_delete_worker">Seçilen çalışanı görevden silmek istediğinize emin misiniz?</string>
    <string name="assignment_return_back">Tekrar Aktif Et</string>
    <string name="are_you_sure_to_update">Seçilen notu güncellemek istediğinize emin misiniz?</string>
    <string name="are_you_sure_to_reactivate">Görevi tekrardan aktif etmek istediğinize emin misiniz?</string>
    <string name="not_seen__">----------</string>
    <string name="information">Bilgi</string>
    <string name="zero">0</string>
    <string name="edit_profile">Bilgilerimi Güncelle</string>
    <string name="updating">Güncelleniyor</string>
    <string name="confirm_update">Güncellemek istediğinize emin misiniz?</string>
    <string name="send_message">Mesaj Gönder</string>
    <string name="assign">Görev Ata</string>
    <string name="read">OKUNDU</string>
    <string name="edit_image">Fotoğrafı Düzenle</string>
    <string name="update_assignment">Görevi Güncelle</string>
    <string name="are_you_sure_to_delete_assignment">Görevi silmek istediğinize emin misiniz?</string>
    <string name="messages">Mesajlar</string>
</resources>