<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home_page"
        android:enabled="true"/>

    <item
        android:id="@+id/nav_products"
        android:icon="@drawable/board"
        android:title="@string/products"
        android:enabled="true"/>

    <item
        android:id="@+id/nav_contact"
        android:icon="@drawable/contact"
        android:title="@string/messages"
        android:enabled="true"/>

    <item
        android:id="@+id/nav_workers"
        android:icon="@drawable/workers"
        android:title="@string/workers"
        android:enabled="true"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"
        android:enabled="true"/>

</menu>