<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsersOnHoldInformation"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:background="@color/white"
        app:logo="@drawable/chevron_left"
        app:title="@string/sign_up"
        app:titleMarginStart="40dp"
        tools:ignore="UnusedAttribute" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/workersImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/unity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,UnusedAttribute"
            app:civ_border_color="@color/gray"
            app:civ_border_width="1dp" />

        <TextView
            android:id="@+id/workers_name"
            style="@style/Base.TextAppearance.AppCompat.SearchResult.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/name_surname"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/workersImage"
            app:layout_constraintStart_toEndOf="@+id/workersImage"
            app:layout_constraintTop_toTopOf="@+id/workersImage"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/datetime"
            style="@style/Base.TextAppearance.AppCompat.SearchResult.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/date_empty"
            android:textColor="@color/grayDark"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UnusedAttribute" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        android:elevation="5dp"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contact"
            android:textColor="@color/orange"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:paddingBottom="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:gravity="start">

            <TextView
                android:id="@+id/worker_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:text="@string/this_version"
                android:layout_gravity="start"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:autoLink="phone"/>

            <TextView
                android:id="@+id/worker_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:drawableStartCompat="@drawable/mail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:text="@string/this_version"
                android:layout_gravity="start"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:autoLink="email"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Switch
            android:id="@+id/worker"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/worker_at_unity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity=""
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guarantee"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:text="@string/authorization"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/authorization"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <EditText
        android:id="@+id/position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/position"
        android:importantForAutofill="no"
        android:textColor="@color/colorPrimaryDark"
        tools:ignore="RtlHardcoded,UnusedAttribute"
        android:inputType="text" />



    <Button
        android:visibility="gone"
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/confirm_user"
        android:layout_gravity="center"
        app:backgroundTint="@color/password"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:onClick="Confirm"/>

    <Button
        android:visibility="gone"
        android:id="@+id/deny"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/deny_user"
        android:layout_gravity="center"
        app:backgroundTint="@color/colorAccent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:onClick="Deny"/>

</LinearLayout>